// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton > should render correctly 1`] = `
"<div class="ant-skeleton" role="status" aria-busy="true" aria-label="Loading content">
  <!--v-if-->
  <div class="ant-skeleton-content">
    <h3 class="ant-skeleton-title"></h3>
    <ul class="ant-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > should render with avatar correctly 1`] = `
"<div class="ant-skeleton ant-skeleton-active ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
  <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
  <div class="ant-skeleton-content">
    <h3 class="ant-skeleton-title"></h3>
    <ul class="ant-skeleton-paragraph">
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>"
`;
